--- a/notebooks/convert_zenodo_23.ipynb
+++ b/notebooks/convert_zenodo_23.ipynb
@@ -156,6 +156,42 @@
    "execution_count": 53
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-13T15:15:24.711872Z",
+     "start_time": "2024-05-13T15:15:24.706486Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "meta.iloc[:,3].value_counts()",
+   "id": "f35368f6fce00e16",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Species eBird Code\n",
+       "combul2    702\n",
+       "reccor     508\n",
+       "rbsrob1    494\n",
+       "wbswea1    469\n",
+       "gnbcam2    406\n",
+       "          ... \n",
+       "yeccan1      1\n",
+       "whbcan1      1\n",
+       "chespa1      1\n",
+       "brcsta1      1\n",
+       "lawgol       1\n",
+       "Name: count, Length: 176, dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 59
+  },
+  {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
