--- a/notebooks/convert_zenodo_23.ipynb
+++ b/notebooks/convert_zenodo_23.ipynb
@@ -602,7 +602,7 @@
     "        audio = np.pad(audio, (0, SR * SEG_LEN - len(audio)))\n",
     "    \n",
     "    # save audio to ogg\n",
-    "    sf.write(target_file.split('.')[0], audio, SR, format='ogg')"
+    "    sf.write(target_file[:-4], audio, SR, format='ogg')"
    ],
    "id": "64b1678f2149a0a0",
    "outputs": [
