notebook for adding esc50 without birds is done

--- a/notebooks/convert_esc50.ipynb
+++ b/notebooks/convert_esc50.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,16 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_PATH = '../data/raw/ESC-50-master'"
+    "DATASET_PATH = '../data/raw/esc50'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "4  1-101296-A-19.wav     1      19    thunderstorm  False    101296    A"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,17 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(220500,) 44100\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "meta = meta[meta['category'] != 'chirping_birds']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Read files with librosa\n",
     "def read_audio(file):\n",
@@ -163,44 +164,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import soundfile as sf\n",
-    "new_dir = f'{DATASET_PATH}/audio_resampled'\n",
-    "\n",
-    "# filename, labels, rating, primary_labels\n",
-    "os.makedirs(new_dir, exist_ok=True)\n",
-    "\n",
-    "for filename in tqdm(meta['filename']):\n",
-    "    audio, sr = read_audio(filename)\n",
-    "    resampled_audio = resample_audio(audio, sr, 32000)\n",
-    "    new_filename = filename.replace(f'{DATASET_PATH}/audio/', f'{new_dir}/')\n",
-    "    os.makedirs(os.path.dirname(new_filename), exist_ok=True)\n",
-    "    sf.write(new_filename, resampled_audio, 32000)\n",
-    "\n",
-    "# write the metadata\n",
-    "new_metadata = pd.DataFrame({\n",
-    "    'filename': meta['filename'],\n",
-    "    \"labels\": \n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d958f2e604c34799801cabdb2daff9f2",
+       "model_id": "865767ca285c48f199cd4e4ceacc395b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/40 [00:00<?, ?it/s]"
+       "  0%|          | 0/1960 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -208,8 +183,125 @@
     }
    ],
    "source": [
+    "import soundfile as sf\n",
+    "new_dir = f'{DATASET_PATH}/train_audio'\n",
     "\n",
-    "   "
+    "# filename, labels, rating, primary_labels\n",
+    "os.makedirs(new_dir, exist_ok=True)\n",
+    "\n",
+    "for filename in tqdm(meta['filename']):\n",
+    "    audio, sr = read_audio(f'{DATASET_PATH}/audio/{filename}')\n",
+    "    resampled_audio = resample_audio(audio, sr, 32000)\n",
+    "\n",
+    "    os.makedirs(f'{new_dir}', exist_ok=True)\n",
+    "    sf.write(f'{new_dir}/{filename}', resampled_audio, 32000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>primary_label</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1-100032-A-0.wav</td>\n",
+       "      <td>silent</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1-100210-A-36.wav</td>\n",
+       "      <td>silent</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1-100210-B-36.wav</td>\n",
+       "      <td>silent</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1-101296-A-19.wav</td>\n",
+       "      <td>silent</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1-101296-B-19.wav</td>\n",
+       "      <td>silent</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            filename primary_label labels  rating\n",
+       "0   1-100032-A-0.wav        silent     []       5\n",
+       "2  1-100210-A-36.wav        silent     []       5\n",
+       "3  1-100210-B-36.wav        silent     []       5\n",
+       "4  1-101296-A-19.wav        silent     []       5\n",
+       "5  1-101296-B-19.wav        silent     []       5"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# write the metadata\n",
+    "new_metadata = pd.DataFrame({\n",
+    "    'filename': meta['filename'],\n",
+    "    \"primary_label\": ['silent'] * len(meta),\n",
+    "    \"labels\": ['[]'] * len(meta),  # Provide a list of empty strings with the same length as meta\n",
+    "    \"rating\": [5] * len(meta) \n",
+    "})\n",
+    "new_metadata.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write metadata to csv\n",
+    "new_metadata.to_csv(f'{DATASET_PATH}/train_metadata.csv', index=False)"
    ]
   }
  ],
