add green noise data and fix for scorer for all silence case
It just ignores the year if it has all zeros. Also made it so visualize preds works with wav files too. When trying to write ogg files I got seg faults

--- a/notebooks/convert_esc50.ipynb
+++ b/notebooks/convert_esc50.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "4  1-101296-A-19.wav     1      19    thunderstorm  False    101296    A"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,13 +164,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "865767ca285c48f199cd4e4ceacc395b",
+       "model_id": "d4d36658fd0b42bdaa3a5cd91614581c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -225,6 +225,7 @@
        "      <th></th>\n",
        "      <th>filename</th>\n",
        "      <th>primary_label</th>\n",
+       "      <th>secondary_labels</th>\n",
        "      <th>labels</th>\n",
        "      <th>rating</th>\n",
        "    </tr>\n",
@@ -235,12 +236,14 @@
        "      <td>1-100032-A-0.wav</td>\n",
        "      <td>silent</td>\n",
        "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1-100210-A-36.wav</td>\n",
        "      <td>silent</td>\n",
+       "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
@@ -249,12 +252,14 @@
        "      <td>1-100210-B-36.wav</td>\n",
        "      <td>silent</td>\n",
        "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1-101296-A-19.wav</td>\n",
        "      <td>silent</td>\n",
+       "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
@@ -263,6 +268,7 @@
        "      <td>1-101296-B-19.wav</td>\n",
        "      <td>silent</td>\n",
        "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -270,15 +276,15 @@
        "</div>"
       ],
       "text/plain": [
-       "            filename primary_label labels  rating\n",
-       "0   1-100032-A-0.wav        silent     []       5\n",
-       "2  1-100210-A-36.wav        silent     []       5\n",
-       "3  1-100210-B-36.wav        silent     []       5\n",
-       "4  1-101296-A-19.wav        silent     []       5\n",
-       "5  1-101296-B-19.wav        silent     []       5"
+       "            filename primary_label secondary_labels labels  rating\n",
+       "0   1-100032-A-0.wav        silent               []     []       5\n",
+       "2  1-100210-A-36.wav        silent               []     []       5\n",
+       "3  1-100210-B-36.wav        silent               []     []       5\n",
+       "4  1-101296-A-19.wav        silent               []     []       5\n",
+       "5  1-101296-B-19.wav        silent               []     []       5"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +294,8 @@
     "new_metadata = pd.DataFrame({\n",
     "    'filename': meta['filename'],\n",
     "    \"primary_label\": ['silent'] * len(meta),\n",
-    "    \"labels\": ['[]'] * len(meta),  # Provide a list of empty strings with the same length as meta\n",
+    "    \"secondary_labels\": ['[]'] * len(meta),\n",
+    "    # \"labels\": ['[]'] * len(meta),  # Provide a list of empty strings with the same length as meta\n",
     "    \"rating\": [5] * len(meta) \n",
     "})\n",
     "new_metadata.head()"
@@ -296,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
